<resources>
    <string name="app_name">UnSarten</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Inicia sesion o Registrate</string>
    <string name="action_sign_in_short">Enviar</string>
    <string name="action_next">Siguiente</string>
    <string name="action_create_order_btn">Crear orden</string>
    <string name="action_back_home_btn">Regresar</string>
    <string name="action_confirm_code">Ingresa el código de 4 dígitos que se te envió a %1$s</string>
    <string name="action_create_order">Solicitar un platillo</string>
    <string name="action_name_order">Nombre del platillo</string>
    <string name="action_budget_order">Presupuesto</string>
    <string name="action_persons_order">Platillo por persona</string>
    <string name="action_ingredients_order">Posibles ingredientes</string>
    <string name="action_add_pictures_order">Agrega una foto de referencia</string>
    <string name="description_profile_image">Imagen de usuario</string>
    <string name="invalid_code_number">Ingresa un código válido</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="phone_number">Número de telefono</string>
    <string name="login_dialog_title">Confirma tu número</string>
    <string name="login_dialog_body">Tu número es +52</string>
    <string name="login_dialog_positive_accept">Aceptar</string>
    <string name="login_dialog_positive">Confirmar</string>
    <string name="login_dialog_negative">Editar</string>
    <string name="action_code_example">Código de 4 dígitos</string>
    <string name="register_user_name">Nombre(s)</string>
    <string name="register_user_last_name">Apellidos</string>
    <string name="register_user_email">E-mail</string>
    <string name="resend_code">Reenviar código</string>
    <string name="edit_phone_number">Cambiar teléfono</string>
    <string name="title_register_user">Ingresa tus datos</string>
    <string name="title_activity_home">Home</string>
    <string name="invalid_email">Correo inválido</string>
    <string name="invalid_service_title">Cambia la URL de servicios</string>
    <string name="invalid_service_body">Cambia la URL de servicios por la que se provee en la entrega, como lo dice en el README</string>
    <string name="login_dialog_body_error">Ingresa un número a 10 dígitos</string>
    <string name="login_dialog_title_error">Número no válido</string>
    <string name="login_dialog_code_title_error">Código inválido</string>
    <string name="create_order_dialog_empty_name_body_error">Ingresa un nombre de la orden</string>
    <string name="create_order_dialog_empty_name_title_error">Nombre inválido</string>
    <string name="create_order_dialog_empty_budget_title_error">Presupuesto inválido</string>
    <string name="create_order_dialog_empty_budget_body_error">Ingresa un presupuesto mayor a $0</string>
    <string name="create_order_dialog_empty_persons_title_error">Cantidad de personas no válido</string>
    <string name="create_order_dialog_empty_persons_body_error">Ingresa un número mayor a 0</string>
    <string name="navigation_bar_messages">Chats</string>
    <string name="navigation_bar_orders">Ordenes</string>
    <string name="navigation_bar_new_order">Nueva orden</string>
    <string name="navigation_bar_profile">Perfil</string>
    <string name="chats_title">Mensajes</string>
    <string name="chat_preview_text">Hola!</string>
    <string name="chat_room_title">Mensajes de la orden</string>
    <string name="chat_room_input">Escribir mensaje</string>
    <string name="chat_room_attachment">Adjuntar imagen</string>
    <string name="chat_room_call_user">Enviar</string>
    <string name="orders_item_list_name">Enchiladas verdes</string>
    <string name="orders_item_list_budget">$250</string>
    <string name="orders_detail_date">2023–26–2 16:20:00</string>
    <string name="orders_detail_budget">Presupuesto: $%1$s</string>
    <string name="orders_detail_persons">Personas: %1$s</string>
    <string name="orders_detail_ingredients">Posibles ingredientes: %1$s</string>
    <string name="orders_detail_author">Solicitado por: %1$s</string>
    <string name="orders_item_list_persons">%1$s personas</string>
    <string name="orders_list">Ver ordenes</string>
    <string name="profile_logout_button">Cerrar sesión</string>
    <string name="profile_user_name">John Doe</string>
    <string name="profile_user_email">john@doe.com</string>
    <string name="profile_title">Perfil</string>
    <string name="orders_detail_image_desc">Imagen</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_title">No hay internet</string>
    <string name="no_internet_body">Para el uso correcto de la aplicación, se necesita tener una conexión activa a internet.</string>

</resources>