<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llOrderDetail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/orders_border"
    android:elevation="10dp"
    android:orientation="vertical"
    android:padding="15dp"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvOrder_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/orders_item_list_name"
            android:textAlignment="center"
            android:textColor="@color/icon"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvOrder_date"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/orders_detail_date"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvOrder_budget"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/orders_detail_budget"
            android:textAlignment="center"
            android:textColor="@color/primary"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvOrder_persons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/orders_detail_persons"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvOrder_ingredients"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/orders_detail_ingredients"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvOrder_author"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/orders_detail_author"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ivOrderImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/white"
                android:padding="1.5dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                tools:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/orders_detail_image_desc" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>