<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llOrderItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/orders_border"
    android:elevation="10dp"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvOrder_name"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/orders_item_list_name"
            android:textColor="@color/icon" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvOrder_budget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orders_item_list_budget"
            android:gravity="start"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tvOrder_persons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/orders_item_list_persons"
            android:textColor="@color/black"/>

    </LinearLayout>


</LinearLayout>